[package]
name = "rcwi"
version = "0.1.0"
authors = ["ulf <ulfahammar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "editor-input",
    "simple-suggest",
]

[dependencies]
editor-input = { path = "./editor-input/" }
indicium = "0.3.0"
#cursive = "*"
tui = "0.16.0"
termion = "1.5"
unicode-width = "0.1"
