[package]
name = "rcwi"
version = "0.1.0"
authors = ["ulf <ulfahammar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "editor-input",
    "simple-suggest",
]

[dependencies]
editor-input = { path = "./editor-input/" }
indicium = "0.3.0"
#cursive = "*"
tui = { version = "0.16.0", features = ["crossterm"] }
crossterm = "*"
unicode-width = "0.1"
tokio = { version = "1", features = ["rt"] }
aws-sdk-cloudwatchlogs = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.22-alpha", package = "aws-sdk-cloudwatchlogs" }
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.22-alpha", package = "aws-config" }
