[package]
name = "editor-input"
version = "0.1.2"
edition = "2021"
description = "User input from $EDITOR"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ulf5/rcwi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
